fix: move static files to separate folder for proper deployment
- static/c/index.html: Contact redirect page
- static/.well-known/assetlinks.json: App Links verification
- Updated workflow to copy static files after mkdocs build

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,5 +36,8 @@ jobs:
       - name: Build documentation
         run: mkdocs build --strict
 
+      - name: Copy static files (contact redirect, App Links)
+        run: cp -r static/* site/
+
       - name: Deploy to GitHub Pages
         run: mkdocs gh-deploy --force
