--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,4 +40,8 @@ jobs:
         run: cp -r static/* site/
 
       - name: Deploy to GitHub Pages
-        run: mkdocs gh-deploy --force
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
+          force_orphan: true
