docs: add Known Limitations page + FAQ updates
- New getting-started/limitations.md: what works, what doesn't, not for emergencies
- FAQ: fixed Android version (10+, not 8.0), added emergency warning
- Nav: added limitations page to Getting Started section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
   - Getting Started:
     - Installation: getting-started/install.md
     - First Steps: getting-started/first-steps.md
+    - What Works (& Doesn't): getting-started/limitations.md
     - App Updates: getting-started/updates.md
     - Permissions: getting-started/permissions.md
   - User Guide:
